[tool.poetry]
name = "test-fast-api-project"
version = "0.1.0"
description = "Myself learning of Fast API framework"
authors = ["Alexandr Abramov <https://github.com/Abramov0Alexandr>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["all"], version = "^0.104.1"}


[tool.poetry.group.db.dependencies]
sqlalchemy = "^2.0.23"
asyncpg = "^0.28.0"
alembic = "^1.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
